[tool.poetry]
name = "img-classification"
version = "0.1.0"
description = ""
authors = ["maryamakbar25 <maryamakbar@g.ucla.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
ipykernel = "^6.29.4"
torchvision = "^0.17.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
